# card-project

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
common/: models.py
nginx/: nginx.conf
portfolio/: settings.py  urls.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_rename_project_projectfiles_project_id_and_more.py  0003_projectfiles_video_url.py  0004_rename_name_projects_title_alter_projectfiles_file_and_more.py  0005_alter_projectfiles_file_alter_projectfiles_video_url_and_more.py
renders/: apps.py  urls.py  views.py
static/: 404.html  base.css
staticfiles/: base.js
templates/: base.html
templates/home/: business_card_client.html  business_card_user.html
templates/users/: login.html  sign_up.html  user_form.html  user_update.html
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py  0003_user_created_at_numbers_urls.py  0004_user_personal_code_alter_numbers_number_and_more.py  0005_alter_user_personal_code.py  0006_alter_user_personal_code.py  0007_alter_user_personal_code.py  0008_alter_numbers_user_id_alter_urls_user_id_and_more.py  0009_alter_user_personal_code.py  0010_alter_user_personal_code.py  0011_alter_user_personal_code.py  0012_alter_user_personal_code.py  0013_alter_user_personal_code.py  0014_alter_user_personal_code.py  0015_alter_user_personal_code.py  0016_alter_user_personal_code.py  0017_alter_user_personal_code.py
